# case-machine-learning-engineer

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-pipeline.yaml
notebook/: Notebook.ipynb
src/: database.py  main.py
tests/: test_load_model.py  test_model_predict.py
