[tool.poetry]
name = "case-machine-learning-engineer"
version = "0.1.0"
description = ""
authors = ["laranapoli <laranapoli0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
